Bug 446704 - Resource chooser's preset columns draw their horizontal slider out of viewport
Summary: Resource chooser's preset columns draw their horizontal slider out of viewport
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: 5.0.0-beta5
Platform: Compiled Sources Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: amyspark
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-08 23:53 UTC by amyspark
Modified: 2021-12-13 20:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screencap of the bug (46.95 KB, image/png)
2021-12-08 23:53 UTC, amyspark
Details

Note You need to log in before you can comment on or make changes to this bug.
Description amyspark 2021-12-08 23:53:54 UTC
Created attachment 144369 [details]
Screencap of the bug

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

Resource chooser's preset columns draw their horizontal slider out of viewport.

STEPS TO REPRODUCE
1.  Open the bundle creation dialog.
2.  Select a preset type with enough resources to trigger scrolling.

OBSERVED RESULT
Horizontal scroll is drawn out of screen.

EXPECTED RESULT
All widgets are drawn correctly.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2021-12-09 22:17:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1215
Comment 2 amyspark 2021-12-13 19:59:40 UTC
Git commit 4c2d29f34ddca0c89b31304ca73ca10b04c9c471 by L. E. Segovia.
Committed on 13/12/2021 at 19:57.
Pushed by lsegovia into branch 'master'.

Fix bundle creation dialog chopping off the horizontal slider

M  +2    -1    plugins/extensions/resourcemanager/dlg_create_bundle.cpp

https://invent.kde.org/graphics/krita/commit/4c2d29f34ddca0c89b31304ca73ca10b04c9c471
Comment 3 amyspark 2021-12-13 20:01:06 UTC
Git commit 1796aed5c96d962f82ee659633b00b7518d3148f by L. E. Segovia.
Committed on 13/12/2021 at 20:00.
Pushed by lsegovia into branch 'krita/5.0'.

Fix bundle creation dialog chopping off the horizontal slider
(cherry picked from commit 4c2d29f34ddca0c89b31304ca73ca10b04c9c471)

M  +2    -1    plugins/extensions/resourcemanager/dlg_create_bundle.cpp

https://invent.kde.org/graphics/krita/commit/1796aed5c96d962f82ee659633b00b7518d3148f