Fix bundle creation dialog chopping off the horizontal slider

BUG: 446704
(cherry picked from commit 4c2d29f34ddca0c89b31304ca73ca10b04c9c471)